--- a/data structrues and algorithms/index.html
+++ b/data structrues and algorithms/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="./LinkedList.js"></script>
+    <script src="./BinaryTree.js"></script>
 </head>
 
 <body>
